[tool.poetry]
name = "pyarena"
version = "0.1.0"
description = ""
authors = ["Adrian Strzała <adrianstrzala@gmail.com>"]
readme = "README.md"
packages = [{include = "pyarena", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
